Some optimizaition of Regex, matchers. Tweaked gameLoop fps limiter.
* Uses a bit more memory, but I think the tradeoff is worth it

Signed-off-by: asw12 <asw12@berkeley.edu>